# GitHubManage

./: README.md  README_EN.md  pyproject.toml  start.sh
app/: __init__.py  analyzer.py  cli.py  db.py  github.py  main.py
app/static/: style.css
app/templates/: dashboard.html  login.html
data/: app.db
