[project]
name = "github-stars-manager"
version = "0.1.0"
description = "Manage GitHub stars, custom lists, and trending snapshots."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "itsdangerous>=2.2.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.hatch.build.targets.wheel]
packages = ["app"]
